k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sembrando-huellas-prod
  labels:
    environment: production
    app.kubernetes.io/part-of: sembrando-huellas
---
apiVersion: v1
kind: Namespace
metadata:
  name: sembrando-huellas-staging
  labels:
    environment: staging
    app.kubernetes.io/part-of: sembrando-huellas
