k8s/06-databases.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sh-postgres
  namespace: sembrando-huellas-prod
spec:
  serviceName: sh-postgres-service
  replicas: 1
  selector:
    matchLabels:
      app: sh-postgres
  template:
    metadata:
      labels:
        app: sh-postgres
    spec:
      containers:
        - name: postgres
          image: postgis/postgis:15-3.3-alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: "500m"
              memory: "1024Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sh-postgres-service
  namespace: sembrando-huellas-prod
spec:
  type: ClusterIP
  selector:
    app: sh-postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sh-redis
  namespace: sembrando-huellas-prod
spec:
  serviceName: sh-redis-service
  replicas: 1
  selector:
    matchLabels:
      app: sh-redis
  template:
    metadata:
      labels:
        app: sh-redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          command: ["redis-server", "--appendonly", "yes"]
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-data
              mountPath: /data
          resources:
            requests:
              cpu: "200m"
              memory: "256Mi"
            limits:
              cpu: "1000m"
              memory: "1024Mi"
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sh-redis-service
  namespace: sembrando-huellas-prod
spec:
  type: ClusterIP
  selector:
    app: sh-redis
  ports:
    - port: 6379
      targetPort: 6379
